<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.getMySign.GetMySignActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="32dp"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_msg_input_your_birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_input_your_birth_day"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inp_lyt_day"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/inp_lyt_month"
                app:layout_constraintStart_toStartOf="@+id/txt_msg_input_your_birth"
                app:layout_constraintTop_toBottomOf="@+id/txt_msg_input_your_birth">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_day"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_hint_day" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inp_lyt_month"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/inp_lyt_day"
                app:layout_constraintEnd_toStartOf="@+id/inp_lyt_year"
                app:layout_constraintStart_toEndOf="@+id/inp_lyt_day"
                app:layout_constraintTop_toTopOf="@+id/inp_lyt_day">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_month"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_hint_month" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inp_lyt_year"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/inp_lyt_day"
                app:layout_constraintEnd_toEndOf="@+id/txt_msg_input_your_birth"
                app:layout_constraintStart_toEndOf="@+id/inp_lyt_month"
                app:layout_constraintTop_toTopOf="@+id/inp_lyt_day">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_year"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_hint_year" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_get_sign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:enabled="false"
                android:text="@string/txt_btn_get_my_sign"
                app:layout_constraintEnd_toEndOf="@+id/txt_msg_input_your_birth"
                app:layout_constraintStart_toStartOf="@+id/txt_msg_input_your_birth"
                app:layout_constraintTop_toBottomOf="@+id/inp_lyt_day" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txt_msg_input_your_birth"
                app:layout_constraintStart_toStartOf="@+id/txt_msg_input_your_birth"
                app:layout_constraintTop_toBottomOf="@+id/btn_get_sign"
                tools:text="ejemplo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>