<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.compatibility.CompatibilityActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvt_compatibility"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_compatibility"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="58dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="40dp"
        android:textAlignment="center"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_person_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvt_compatibility"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_person_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_person1"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_name_person_1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_person_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_edt_name_person1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_hint_input_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_sign_person_1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_name_person_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_edt_sign_person_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_hint_input_sign" />


            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_person_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_view_person_1"
        app:layout_constraintStart_toStartOf="@id/card_view_person_1"
        app:layout_constraintEnd_toEndOf="@id/card_view_person_1"
        android:layout_marginTop="30dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_person_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_person2"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_name_person_2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txt_person_2"
                app:layout_constraintStart_toStartOf="@id/txt_person_2"
                app:layout_constraintEnd_toEndOf="@id/txt_person_2"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_edt_name_person_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_hint_input_name"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_sign_person_2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edt_name_person_2"
                app:layout_constraintStart_toStartOf="@id/edt_name_person_2"
                app:layout_constraintEnd_toEndOf="@id/edt_name_person_2"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_edt_sing_person_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/txt_hint_input_sign"
                    />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_compatibility"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_result_compatibility"
        app:layout_constraintStart_toStartOf="@id/txt_result_compatibility"
        app:layout_constraintEnd_toEndOf="@id/txt_result_compatibility"
        android:layout_marginTop="30dp"
        android:text="@string/txt_btn_get_my_compatibility"
        tools:ignore="InvalidId" />

<com.google.android.material.textview.MaterialTextView
    android:id="@+id/txt_result_compatibility"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    tools:text="presenter resultant"
    android:textAlignment="center"
    android:textSize="20sp"
    app:layout_constraintTop_toBottomOf="@id/card_view_person_2"
    app:layout_constraintStart_toStartOf="@id/card_view_person_2"
    app:layout_constraintEnd_toEndOf="@id/card_view_person_2"
/>
</androidx.constraintlayout.widget.ConstraintLayout>